handling path to redis server executable